--- a/Css.css
+++ b/Css.css
@@ -41,4 +41,8 @@ center {
    font-size: 50px;
    text-align:start;
    padding: 0px;
+   color: #FFF3E7;
+ }
+body {
+   background-color: #313131;
  }
