--- a/Css.css
+++ b/Css.css
@@ -16,7 +16,7 @@ img {
   padding: 30px;
 }
 body {
-   background-color: #313131;
+   background-color: rgb(49, 49, 49);
  }
 .image1 {
   max-width: 50%;
