--- a/Css.css
+++ b/Css.css
@@ -5,7 +5,7 @@ body {
 h1 {
   font-family: 'Trebuchet Ms', sans-serif;
   font-weight: bold;
-  
+  color: #FFF3E7;
 }
 h2 {
   font-family: 'Trebuchet Ms', sans-serif;
@@ -16,7 +16,7 @@ img {
   max-width: 100%;
   height: auto;
   float: left;
-  padding: 30px;
+  padding: 20px;
 }
 
 .image1 {
