--- a/Css.css
+++ b/Css.css
@@ -30,8 +30,9 @@ center {
   font-size: 30px;
 }
 .row {
-    width: 100%;
-    padding: 0px;
+   text-align: center;
+   width: 100%;
+   padding: 0px;
     
  }
  .jobicons {
