--- a/Css.css
+++ b/Css.css
@@ -10,6 +10,7 @@ h1 {
 h2 {
   font-family: 'Trebuchet Ms', sans-serif;
   font-weight: normal;
+  width:80%
   font-size: 20px;
 }
 img {
@@ -33,19 +34,19 @@ center {
    text-align: center;
    width: 100%;
    padding: 0px;
+   margin:auto;
     
  }
  .jobicons {
     max-width: 100%;
     height: auto;
     padding: 5px;
-
  }
  .intext {
    font-family: 'Trebuchet Ms', sans-serif;
    font-size: 40px;
-   text-align: start;
    padding: 0px;
    color: #FFF3E7;
+   text-align: center;
+   margin: auto;
  }
-
